@@ -28,6 +28,7 @@
 //
 
 #include <string>
+#include <utility>
 
 #include "atf-c++/tests.hpp"
 
@@ -36,6 +37,8 @@ namespace atf_run {
 
 std::string check_requirements(const atf::tests::vars_map&,
                                const atf::tests::vars_map&);
+std::pair< int, int > get_required_user(const atf::tests::vars_map&,
+                                        const atf::tests::vars_map&);
 
 } // namespace atf_run
 } // namespace atf
